[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/sprites/Set-Tools.png" type="Texture" id=1]
[ext_resource path="res://player/scythe/scythe.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]

[node name="scythe" type="Node2D" groups=["tool"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]

[node name="sprite_1" type="Sprite" parent="Sprite"]
visible = false
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 26, 146, 18, 20 )

[node name="sprite_2" type="Sprite" parent="Sprite"]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 98, 146, 18, 20 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
